--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ title: Measures2Go
         <div data-role="header">
             <h1>Measures2Go</h1>
         </div><!-- /header -->
+        <p> Test Paragraph <br>
+        	Line 2 test
+        </p>
  
         <div data-role="content">
         	{% for post in site.posts %}
