--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@ title: Measures2Go
         <div data-role="header">
             <h1>Measures2Go</h1>
         </div><!-- /header -->
-        <p> Test Paragraph <br>
-        	Line 2 test
+        <p> Currently under construction, Measures2Go is a website for  <br>
+        rehabilitation professionals to use Standard Outcome Measures <br>
+        in clinical practice, without pen and paper, on a mobile device.
         </p>
  
         <div data-role="content">
