--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ title: Measures2Go
         <div data-role="header">
             <h1>Measures2Go</h1>
         </div><!-- /header -->
-        <p> Currently under construction, Measures2Go is a website for  <br>
-        rehabilitation professionals to use Standard Outcome Measures <br>
+        <p> Currently under construction, Measures2Go is a website for
+        rehabilitation professionals to use Standard Outcome Measures
         in clinical practice, without pen and paper, on a mobile device.
         </p>
  
