--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@ title: Measures2Go
         <div data-role="header">
             <h1>Measures2Go</h1>
         </div><!-- /header -->
-        <p> Currently under construction, Measures2Go is a website for
-        rehabilitation professionals to use Standard Outcome Measures
-        in clinical practice, without pen and paper, on a mobile device.
+        <p> A website for rehabilitation professionals to use Standard Outcome Measures in clinical practice, without pen and paper, on a mobile device.
         </p>
  
         <div data-role="content">
