--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Measures2Go
         <div data-role="header">
             <h1>Measures2Go</h1>
         </div><!-- /header -->
-        <p> A website for rehabilitation professionals to use Standard Outcome Measures in clinical practice on a mobile device.
+        <p> <h2></h2>A website for rehabilitation professionals to use Standard Outcome Measures in clinical practice on a mobile device.</h2>
         </p>
  
         <div data-role="content">
