--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Measures2Go
         <div data-role="header">
             <h1>Measures2Go</h1>
         </div><!-- /header -->
-        <p> <h2></h2>A website for rehabilitation professionals to use Standard Outcome Measures in clinical practice on a mobile device.</h2>
+        <p> <h2></h2>A utility for rehab professionals to use Standard Outcome Measures on a mobile device</h2>
         </p>
  
         <div data-role="content">
