--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ title: Measures2Go
         <div data-role="header">
             <h1>Measures2Go</h1>
         </div><!-- /header -->
-        <p> <h2></h2>A utility for rehab professionals to use Standard Outcome Measures on a mobile device</h2>
+        h2 {text-align: center;}
+        <p> <h2>A utility for rehab professionals to use Standard Outcome Measures on a mobile device</h2>
         </p>
  
         <div data-role="content">
