--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@ title: Measures2Go
 	<script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 </head>
 <body>
-<style> {background-color e9e9e9} </style>
+<style> background-color {e9e9e9};
+h3 {text-align: center;}
+	
+</style>
     <div data-role="page">
  
         <div data-role="header">
             <h1>Measures2Go</h1>
         </div><!-- /header -->
-        h2 {text-align: center;}
+     
         <p> <h2>A utility for rehab professionals to use Standard Outcome Measures on a mobile device</h2>
         </p>
  
