--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Measures2Go
 	<script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 </head>
 <body>
-<style> background-color {e9e9e9};
+<style> background-color: e9e9e9;
 h3 {text-align: center;}
 	
 </style>
