--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@ h3 {text-align: center;}
         </div><!-- /content -->
     </div><!-- /page -->
     
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54ab3cc217439777" async="async"></script>
+<script type="text/javascript">
+var addthis_config = {
+     pubid: "YOUR-PROFILE-ID"
+}
+</script>
+
+<a href="http://www.addthis.com/bookmark.php?v=250" 
+	class="addthis_button"><img 
+	src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" 
+	width="125" height="16" border="0" alt="Share" /></a>
+
+<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js"></script>
 </body>
 </html>
