--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@ title: Measures2Go
     <link rel="stylesheet" href="style.css">
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
+	<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript" src="http://s.sharethis.com/loader.js"></script>
 </head>
 <body>
 <style> {background-color: e9e9e9;}
@@ -33,17 +36,6 @@ h3 {text-align: center;}
         </div><!-- /content -->
     </div><!-- /page -->
     
-<script type="text/javascript">
-var addthis_config = {
-     pubid: "YOUR-PROFILE-ID"
-}
-</script>
 
-<a href="http://www.addthis.com/bookmark.php?v=250" 
-	class="addthis_button"><img 
-	src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" 
-	width="125" height="16" border="0" alt="Share" /></a>
-
-<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js"></script>
 </body>
 </html>
