--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@ h3 {text-align: center;}
 			{% endfor %}
         </div><!-- /content -->
     </div><!-- /page -->
-    
+    <script type="text/javascript">stLight.options({publisher: "f9af0431-4046-4b95-bf84-0cb6a0c8044a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+<script>
+var options={ "publisher": "f9af0431-4046-4b95-bf84-0cb6a0c8044a", "logo": { "visible": true, "url": "", "img": "http://sd.sharethis.com/disc/images/demo_logo.png", "height": 45}, "ad": { "visible": false, "openDelay": "5", "closeDelay": "0"}, "livestream": { "domain": "", "type": "sharethis"}, "ticker": { "visible": false, "domain": "", "title": "", "type": "sharethis"}, "facebook": { "visible": false, "profile": "sharethis"}, "fblike": { "visible": false, "url": ""}, "twitter": { "visible": false, "user": "sharethis"}, "twfollow": { "visible": false}, "custom": [{ "visible": false, "title": "Custom 1", "url": "", "img": "", "popup": false, "popupCustom": { "width": 300, "height": 250}}, { "visible": false, "title": "Custom 2", "url": "", "img": "", "popup": false, "popupCustom": { "width": 300, "height": 250}}, { "visible": false, "title": "Custom 3", "url": "", "img": "", "popup": false, "popupCustom": { "width": 300, "height": 250}}], "chicklets": { "items": ["facebook", "twitter", "linkedin", "email", "pinterest"]}};
+var st_bar_widget = new sharethis.widgets.sharebar(options);
+</script>
 
 </body>
 </html>
