--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@ title: Measures2Go
 
 </head>
 <body>
-<style> {background-color: e9e9e9;}
+<style> 
+
+body {
+	background-color: e9e9e9;
+	
+}
 h3 {text-align: center;}
 	
 </style>
