--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ h3 {text-align: center;}
         <p> <h3>A utility for rehab professionals to use Standard Outcome Measures on a mobile device</h3>
         
         <!-- Start ShareThis-->
+        #st_facebook_large align: center
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_twitter_large' displayText='Tweet'></span>
 <span class='st_linkedin_large' displayText='LinkedIn'></span>
