--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ body {
 	
 }
 h3 {text-align: center;}
+
+   h4 {text-align: center;}
 	
 </style>
     <div data-role="page">
@@ -34,12 +36,12 @@ h3 {text-align: center;}
         <p> <h3>A utility for rehab professionals to use Standard Outcome Measures on a mobile device</h3>
         
         <!-- Start ShareThis-->
-        .facebook_large align: center
-<span class='st_facebook_large' displayText='Facebook'></span>
-<span class='st_twitter_large' displayText='Tweet'></span>
-<span class='st_linkedin_large' displayText='LinkedIn'></span>
-<span class='st_pinterest_large' displayText='Pinterest'></span>
-<span class='st_email_large' displayText='Email'></span>
+     
+<h4> <span class='st_facebook_small' displayText='Facebook'></span>
+<span class='st_twitter_small' displayText='Tweet'></span>
+<span class='st_linkedin_small' displayText='LinkedIn'></span>
+<span class='st_pinterest_small' displayText='Pinterest'></span>
+<span class='st_email_small' displayText='Email'></span></h4>
 <!-- End ShareThis-->
         </p>
  
