--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ h3 {text-align: center;}
         
         <!-- Start ShareThis-->
      
-<h4> <span class='st_facebook_small' displayText='Facebook'></span>
-<span class='st_twitter_small' displayText='Tweet'></span>
+<span class='st_facebook_large' displayText='Facebook'></span>
+<span class='st_twitter_large' displayText='Tweet'></span>
 <span class='st_linkedin_small' displayText='LinkedIn'></span>
 <span class='st_pinterest_small' displayText='Pinterest'></span>
-<span class='st_email_small' displayText='Email'></span></h4>
+<span class='st_email_small' displayText='Email'></span>
 <!-- End ShareThis-->
         </p>
  
