--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ h3 {text-align: center;}
      
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_twitter_large' displayText='Tweet'></span>
-<span class='st_linkedin_small' displayText='LinkedIn'></span>
-<span class='st_pinterest_small' displayText='Pinterest'></span>
-<span class='st_email_small' displayText='Email'></span>
+<span class='st_linkedin_large' displayText='LinkedIn'></span>
+<span class='st_pinterest_large' displayText='Pinterest'></span>
+<span class='st_email_large' displayText='Email'></span>
 <!-- End ShareThis-->
         </p>
  
