--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@ h4 {text-align: center;}
                 	<a href="#" class="ui-collapsible-heading-toggle ui-btn ui-btn-icon-left ui-btn-inherit ui-icon-minus">Heading<span class="ui-collapsible-heading-status"> click to collapse contents</span></a>
                 	
                 	<form>
-    <input type="button" disabled="" value="Input button with disabled attribute">
+    <input type="button" disabled="" value="TUG (In Progress)">
     <div class="ui-input-btn ui-btn ui-state-disabled">
         Enhanced
-        <input type="button" disabled="" data-enhanced="true" value="Enhanced">
+        <input type="button" disabled="" data-enhanced="true" value="Tinetti">
     </div>
 </form>
                 </div>
