--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h4 {text-align: center;}
                 	<form>
     <input type="button" disabled="" value="TUG (In Progress)">
     <div class="ui-input-btn ui-btn ui-state-disabled">
-        Enhanced
+        Tinetti
         <input type="button" disabled="" data-enhanced="true" value="Tinetti">
     </div>
 </form>
